<resources>
    <string name="app_name">task1</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="MPlus">M+</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="P_M">+/-</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplyed_by">*</string>
    <string name="diveded_by">/</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
